--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <div class="controls">
             <button id="playPauseBtn">Play</button>
             <input type="range" id="seekBar" value="0" min="0" step="1">
+            <button id="openNewTabBtn">Open in New Tab</button>
         </div>
     </div>
     <script>
@@ -74,6 +75,9 @@
             const video = document.getElementById('videoPlayer');
             const playPauseBtn = document.getElementById('playPauseBtn');
             const seekBar = document.getElementById('seekBar');
+            const openNewTabBtn = document.getElementById('openNewTabBtn');
+            
+            const videoSrc = video.querySelector('source').src;
 
             // Update the play/pause button text
             function updatePlayPauseButton() {
@@ -102,6 +106,11 @@
             // Seek the video when the user moves the range input
             seekBar.addEventListener('input', () => {
                 video.currentTime = (seekBar.value / 100) * video.duration;
+            });
+
+            // Open video in a new tab
+            openNewTabBtn.addEventListener('click', () => {
+                window.open(videoSrc, '_blank');
             });
         });
     </script>
